# shuup-mirage-field

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  VENDOR-LICENSES.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  pypi.yml  release.yml
.tx/: config
shuup_addon_template/: __init__.py  apps.py  build_resources.js  package.json
shuup_addon_template/static_src/: index.js
shuup_addon_template_tests/: settings.py
shuup_mirage_field/: crypto.py  tools.py
shuup_mirage_field_tests/: apps.py  test_crypto.py  test_field.py
shuup_mirage_field_tests/settings/: base.py  mysql.py  pg.py
