[tool.poetry]
name = "shuup-addon-template"
version = "1.0.0"
description = "Shuup Addon Template"
authors = ["Shuup <devs@shuup.com>"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry.dependencies]
python = ">=3.6,<4.0"
shuup = "^2.7"

[tool.poetry.dev-dependencies]
black = "20.8b1"
flake8 = "^3.9"
isort = "^5.8"
pytest = "^6.2"
pytest-cov = "^2.11"
pytest-django = "^4.2"
beautifulsoup4 = "^4"
mock = "^4.0.3"

[[tool.poetry.source]]
name = "shuup"
url = "https://pypi.shuup.com/simple"

[tool.black]
exclude = "(migrations|node_modules)"
line_length = 120

[tool.isort]
profile = "black"
line_length=120
atomic = true
skip_glob = ["*/migrations/*", "*/node_modules/*"]
