[tool.poetry]
name = "shuup-mirage-field"
version = "2.0.0"
description = "Shuup mirage field"
authors = ["Shuup <devs@shuup.com>"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry.dependencies]
python = ">=3.6,<4"
django = ">=2,<4"
cryptography = "^3.4.7"

[tool.poetry.dev-dependencies]
black = "20.8b1"
flake8 = "^3.9"
isort = "^5.8"
pytest = "^6.2"
pytest-cov = "^2.11"
pytest-django = "^4.2"
beautifulsoup4 = "^4"
mock = "^4.0.3"
PyMySQL = "^1.0.2"
psycopg2-binary = "2.8.6"

[tool.black]
exclude = "(migrations|node_modules)"
line_length = 120

[tool.isort]
profile = "black"
line_length=120
atomic = true
skip_glob = ["*/migrations/*", "*/node_modules/*"]
