[metadata]
name = shuup-addon-template
version = 1.0.0
description = Shuup Addon Template
long_description = file: README.md
keywords = shuup

[options]
include_package_data = True
packages = find:
install_requires =
    shuup>=2,<3

[options.entry_points]
shuup.addon = shuup_addon_template = shuup_addon_template

[options.packages.find]
exclude = shuup_addon_template_tests, shuup_addon_template_tests.*

[bdist_wheel]
universal = 1

[flake8]
exclude = dist,build,migrations,docs,venv,node_modules
max-line-length = 120
max-complexity = 10

[tool:pytest]
DJANGO_SETTINGS_MODULE = shuup_addon_template_tests.settings
django_find_project = false
norecursedirs = node_modules .git venv

[coverage:run]
branch = True
omit = */migrations/*
