[metadata]
name = shuup-mirage-field
version = 2.1.0
description = Shuup Mirage Field
long_description = file: README.md
keywords = shuup

[options]
include_package_data = True
packages = find:
install_requires =
    django>=2,<4
    cryptography>=3.4.7,<4

[options.packages.find]
exclude = shuup_mirage_field_tests, shuup_mirage_field_tests.*

[bdist_wheel]
universal = 1

[flake8]
exclude = dist,build,migrations,docs,venv,node_modules
max-line-length = 120
max-complexity = 10

[tool:pytest]
DJANGO_SETTINGS_MODULE = shuup_mirage_field_tests.settings
django_find_project = false
norecursedirs = node_modules .git venv

[coverage:run]
branch = True
omit = */migrations/*
